prevent make button from jumping on right side

--- a/resources/assets/css/common/keyframes.less
+++ b/resources/assets/css/common/keyframes.less
@@ -185,3 +185,11 @@
   50%  {opacity: 1;}
   100% {opacity: 0;}
 }
+@keyframes make-button-wrap {
+  0%   {padding-right: @tile;}
+  100% {padding-right: 0;}
+}
+@-webkit-keyframes make-button-wrap {
+  0%   {padding-right: @tile;}
+  100% {padding-right: 0;}
+}
